[tool.poetry]
name = "freflow-modem"
version = "0.1.0"
description = "FreFlow Modem"
authors = ["solti48 <soltia48@protonmail.com>"]
license = "UNLICENSED"
# readme = "README.md"
packages = [
    {include = "freflow"},
    {include = "freflow-modem"}
]

[tool.poetry.scripts]
freflow-modem = "freflow-modem.cli:main"

[tool.poetry.dependencies]
python = "^3.11"
fire = "^0.6.0"
fastcrc = "^0.3.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
