[tool.poetry]
name = "freflow-modem"
version = "0.1.0"
description = "Modem for FreFlow glow stick"
authors = ["solti48 <soltia48@protonmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "freflow"},
    {include = "freflow_tx"}
]

[tool.poetry.scripts]
freflow-tx = "freflow_tx.cli:main"

[tool.poetry.dependencies]
python = "^3.12"
fire = "^0.7.0"
fastcrc = "^0.3.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
